// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 1599.8181667894016,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 1599.8181667894016,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 573.9063558965418,
      "y": 4,
      "z": 1.9713612693307425,
    },
    "isLeaf": false,
    "length": 879.8999917341708,
    "link": undefined,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 573.9063558965418,
      "y": 4,
      "z": 441.9213571364162,
    },
    "path": "/root/src",
    "visible": true,
    "width": 559.9363583762905,
    "x0": 543.9381767083966,
    "y0": 31.996363335788033,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 573.9063558965419,
      "y": 6,
      "z": -23.98362229188092,
    },
    "isLeaf": false,
    "length": 513.2915972358827,
    "link": undefined,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 573.9063558965419,
      "y": 6,
      "z": 232.6621763260604,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 473.63706661888114,
    "x0": 587.0878225871013,
    "y0": 97.6934783991484,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 455.4970892418216,
      "y": 6,
      "z": 511.44071535249503,
    },
    "isLeaf": false,
    "length": 169.517049308207,
    "link": undefined,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 692.3156225512621,
      "y": 6,
      "z": 511.44071535249503,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 473.63706661888114,
    "x0": 587.0878225871013,
    "y0": 676.6821906983915,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 477.07191218117384,
      "y": 506,
      "z": -7.559343526040834,
    },
    "isLeaf": true,
    "length": 158.10012602290078,
    "link": undefined,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 670.7407996119098,
      "y": 506,
      "z": -7.559343526040834,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 387.33777486147176,
    "x0": 630.2374684658059,
    "y0": 163.39059346250878,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 477.07191218117384,
      "y": 506,
      "z": 216.23789756022035,
    },
    "isLeaf": true,
    "length": 158.10012602290078,
    "link": undefined,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 670.7407996119098,
      "y": 506,
      "z": 216.23789756022035,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 387.33777486147176,
    "x0": 630.2374684658059,
    "y0": 387.18783454876996,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 477.07191218117384,
      "y": 506,
      "z": 511.44071535249503,
    },
    "isLeaf": true,
    "length": 38.12281918148631,
    "link": undefined,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 670.7407996119098,
      "y": 506,
      "z": 511.44071535249503,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 387.33777486147176,
    "x0": 630.2374684658059,
    "y0": 742.3793057617519,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 269.94090420655556,
      "y": 4,
      "z": 949.8636250920512,
    },
    "isLeaf": false,
    "length": 479.9454500368204,
    "link": undefined,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 669.895445903906,
      "y": 4,
      "z": 949.8636250920512,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 799.9090833947009,
    "x0": 319.9636333578803,
    "y0": 959.890900073641,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 125.9572691955094,
      "y": 6,
      "z": 767.4843540780594,
    },
    "isLeaf": false,
    "length": 95.9890900073641,
    "link": undefined,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 205.9481775349795,
      "y": 6,
      "z": 767.4843540780594,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 159.98181667894022,
    "x0": 335.96181502577434,
    "y0": 969.4898090743774,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 136.6401945274385,
      "y": 506,
      "z": 767.4843540780594,
    },
    "isLeaf": true,
    "length": 70.35006921073409,
    "link": undefined,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": 195.26525220305035,
      "y": 506,
      "z": 767.4843540780594,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 117.25011535122371,
    "x0": 357.32766568963257,
    "y0": 982.3093194726923,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 581.905446730489,
      "y": 6,
      "z": 1074.6494421016246,
    },
    "isLeaf": false,
    "length": 230.3738160176738,
    "link": undefined,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 773.8836267452172,
      "y": 6,
      "z": 1074.6494421016246,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 383.9563600294564,
    "x0": 735.9163567231249,
    "y0": 1209.4625340927876,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 538.505809177778,
      "y": 506,
      "z": 993.1725052513572,
    },
    "isLeaf": true,
    "length": 41.21597348321734,
    "link": undefined,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 600.011432697215,
      "y": 506,
      "z": 993.1725052513572,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 123.01124703887376,
    "x0": 757.7529974180596,
    "y0": 1222.5645185097485,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 538.505809177778,
      "y": 506,
      "z": 1047.4904631515353,
    },
    "isLeaf": true,
    "length": 41.21597348321711,
    "link": undefined,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 600.011432697215,
      "y": 506,
      "z": 1047.4904631515353,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 123.01124703887376,
    "x0": 757.7529974180596,
    "y0": 1276.8824764099268,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 538.505809177778,
      "y": 506,
      "z": 1101.8084210517136,
    },
    "isLeaf": true,
    "length": 41.21597348321757,
    "link": undefined,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 600.011432697215,
      "y": 506,
      "z": 1101.8084210517136,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 123.01124703887376,
    "x0": 757.7529974180596,
    "y0": 1331.2004343101048,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 538.505809177778,
      "y": 506,
      "z": 1156.1263789518916,
    },
    "isLeaf": true,
    "length": 41.21597348321734,
    "link": undefined,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 600.011432697215,
      "y": 506,
      "z": 1156.1263789518916,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 123.01124703887376,
    "x0": 757.7529974180596,
    "y0": 1385.518392210283,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 674.3007039282237,
      "y": 506,
      "z": 1002.2254982347202,
    },
    "isLeaf": true,
    "length": 59.321959449943506,
    "link": undefined,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 717.7003414809345,
      "y": 506,
      "z": 1002.2254982347202,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 86.79927510542166,
    "x0": 902.6008851518683,
    "y0": 1222.5645185097485,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 782.9366197285801,
      "y": 506,
      "z": 1002.2254982347202,
    },
    "isLeaf": true,
    "length": 59.321959449943506,
    "link": undefined,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 826.336257281291,
      "y": 506,
      "z": 1002.2254982347202,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 86.79927510542166,
    "x0": 1011.2368009522247,
    "y0": 1222.5645185097485,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 674.3007039282237,
      "y": 506,
      "z": 1074.6494421016246,
    },
    "isLeaf": true,
    "length": 59.321959449943506,
    "link": undefined,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 717.7003414809345,
      "y": 506,
      "z": 1074.6494421016246,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 86.79927510542166,
    "x0": 902.6008851518683,
    "y0": 1294.9884623766527,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 782.9366197285801,
      "y": 506,
      "z": 1074.6494421016246,
    },
    "isLeaf": true,
    "length": 59.321959449943506,
    "link": undefined,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 826.336257281291,
      "y": 506,
      "z": 1074.6494421016246,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 86.79927510542166,
    "x0": 1011.2368009522247,
    "y0": 1294.9884623766527,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 674.3007039282237,
      "y": 506,
      "z": 1147.0733859685288,
    },
    "isLeaf": true,
    "length": 59.32195944994328,
    "link": undefined,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 717.7003414809345,
      "y": 506,
      "z": 1147.0733859685288,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 86.79927510542166,
    "x0": 902.6008851518683,
    "y0": 1367.4124062435571,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 782.9366197285801,
      "y": 506,
      "z": 1147.0733859685288,
    },
    "isLeaf": true,
    "length": 59.32195944994328,
    "link": undefined,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 826.336257281291,
      "y": 506,
      "z": 1147.0733859685288,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 86.79927510542166,
    "x0": 1011.2368009522247,
    "y0": 1367.4124062435571,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 1178.8225099390856,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 1178.8225099390856,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 103.64675298172571,
      "y": 4,
      "z": 44.70562748477144,
    },
    "isLeaf": false,
    "length": 707.2935059634515,
    "link": undefined,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 103.64675298172571,
      "y": 4,
      "z": 398.35238046649715,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 471.5290039756343,
    "x0": 117.88225099390857,
    "y0": 117.88225099390857,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 9.340952186598855,
      "y": 6,
      "z": 115.43497808111653,
    },
    "isLeaf": false,
    "length": 353.6467529817256,
    "link": undefined,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 197.95255377685257,
      "y": 6,
      "z": 115.43497808111653,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 377.2232031805074,
    "x0": 165.035151391472,
    "y0": 188.6116015902537,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 30.926822305867873,
      "y": 506,
      "z": 115.43497808111655,
    },
    "isLeaf": true,
    "length": 266.46363268670234,
    "link": undefined,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": 176.36668365758356,
      "y": 506,
      "z": 115.43497808111655,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 290.87972270343136,
    "x0": 208.20689163001003,
    "y0": 232.20316173776538,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 268.6819043731977,
      "y": 6,
      "z": 380.6700428174109,
    },
    "isLeaf": false,
    "length": 70.72935059634506,
    "link": undefined,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 268.6819043731977,
      "y": 6,
      "z": 416.0347181155834,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 47.152900397563485,
    "x0": 495.10545417441597,
    "y0": 612.9877051683246,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 268.6819043731977,
      "y": 506,
      "z": 385.5282275214504,
    },
    "isLeaf": true,
    "length": 51.29661178018705,
    "link": undefined,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 268.6819043731977,
      "y": 506,
      "z": 411.1765334115439,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 34.197741186791404,
    "x0": 501.583033779802,
    "y0": 622.7040745764036,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 15.235064736294277,
      "y": 4,
      "z": 751.9991334482229,
    },
    "isLeaf": false,
    "length": 117.88225099390866,
    "link": undefined,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 309.94069222106566,
      "y": 4,
      "z": 751.9991334482229,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 589.4112549695428,
    "x0": 117.88225099390857,
    "y0": 943.0580079512686,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 51.561364859220674,
      "y": 502,
      "z": 751.9991334482228,
    },
    "isLeaf": true,
    "length": 85.49435296697834,
    "link": undefined,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": 273.6143920981393,
      "y": 502,
      "z": 751.9991334482228,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 444.10605447783723,
    "x0": 190.53485123976137,
    "y0": 959.2519569647336,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 120,
      "y": 500,
      "z": -65,
    },
    "isLeaf": true,
    "length": 740,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 120,
      "y": 500,
      "z": 305,
    },
    "path": "/root",
    "visible": true,
    "width": 740,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 207.84609690826528,
      "y": 2,
      "z": -21.07695154586736,
    },
    "isLeaf": false,
    "length": 915.6921938165306,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 207.84609690826528,
      "y": 2,
      "z": 436.7691453623979,
    },
    "path": "/root",
    "visible": true,
    "width": 915.6921938165306,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 2.923048454132669,
      "y": 4,
      "z": 207.84609690826528,
    },
    "isLeaf": true,
    "length": 819.6921938165306,
    "link": "http://www.google.de",
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 412.76914536239804,
      "y": 4,
      "z": 207.84609690826528,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 819.6921938165307,
    "x0": 48,
    "y0": 48,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 641.6921938165307,
      "y": 502,
      "z": 2.9230484541326405,
    },
    "isLeaf": true,
    "length": 819.6921938165306,
    "link": undefined,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 641.6921938165307,
      "y": 502,
      "z": 412.7691453623979,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 0,
    "x0": 891.6921938165307,
    "y0": 48,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 293.9387691339814,
      "y": 2,
      "z": 21.969384566990698,
    },
    "isLeaf": false,
    "length": 1087.8775382679628,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 293.9387691339814,
      "y": 2,
      "z": 565.9081537009721,
    },
    "path": "/root",
    "visible": true,
    "width": 1087.8775382679628,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 45.9693845669907,
      "y": 4,
      "z": 33.9693845669907,
    },
    "isLeaf": true,
    "length": 471.9387691339814,
    "link": "http://www.google.de",
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 541.9081537009721,
      "y": 4,
      "z": 33.9693845669907,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 991.8775382679628,
    "x0": 48,
    "y0": 48,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 45.9693845669907,
      "y": 4,
      "z": 553.9081537009721,
    },
    "isLeaf": false,
    "length": 471.9387691339814,
    "link": undefined,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 541.9081537009721,
      "y": 4,
      "z": 553.9081537009721,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 991.8775382679628,
    "x0": 48,
    "y0": 567.9387691339814,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -36.41836925980559,
      "y": 6,
      "z": 459.92346141747674,
    },
    "isLeaf": true,
    "length": 375.9387691339814,
    "link": undefined,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -36.41836925980559,
      "y": 6,
      "z": 647.8928459844674,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 235.16326148038883,
    "x0": 96,
    "y0": 615.9387691339814,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 282.3418306772823,
      "y": 6,
      "z": 553.9081537009721,
    },
    "isLeaf": true,
    "length": 375.9387691339814,
    "link": undefined,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 588.6989690710693,
      "y": 6,
      "z": 553.9081537009721,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 612.7142767875739,
    "x0": 379.1632614803888,
    "y0": 615.9387691339814,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 765.8775382679628,
      "y": 504,
      "z": 459.92346141747674,
    },
    "isLeaf": true,
    "length": 375.9387691339814,
    "link": undefined,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 765.8775382679628,
      "y": 504,
      "z": 647.8928459844674,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 0,
    "x0": 1015.8775382679628,
    "y0": 615.9387691339814,
    "z0": 4,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes should build the tree map with valid coordinates using the fixed folder structure 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 1573.3126291998992,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 1573.3126291998992,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 44.996117974981104,
      "y": 4,
      "z": -53.33592135001261,
    },
    "isLeaf": false,
    "length": 235.99689437998487,
    "link": undefined,
    "markingColor": undefined,
    "name": "folder_1",
    "outgoingEdgePoint": Vector3 {
      "x": 477.6570910049534,
      "y": 4,
      "z": -53.33592135001261,
    },
    "path": "/root/folder_1",
    "visible": true,
    "width": 865.3219460599446,
    "x0": 78.66563145999496,
    "y0": 78.66563145999496,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 2,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 83.81429873281036,
      "y": 504,
      "z": -159.89209487309668,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_1",
    "outgoingEdgePoint": Vector3 {
      "x": 438.8389102471241,
      "y": 504,
      "z": -159.89209487309668,
    },
    "path": "/root/folder_1/children_1",
    "visible": true,
    "width": 710.0492230286274,
    "x0": 156.30199297565352,
    "y0": 90.10790512690332,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 4,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 83.81429873281036,
      "y": 504,
      "z": -159.89209487309668,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_2",
    "outgoingEdgePoint": Vector3 {
      "x": 438.8389102471241,
      "y": 504,
      "z": -159.89209487309668,
    },
    "path": "/root/folder_1/children_2",
    "visible": true,
    "width": 710.0492230286274,
    "x0": 156.30199297565352,
    "y0": 90.10790512690332,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 83.81429873281036,
      "y": 504,
      "z": -159.89209487309668,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_3",
    "outgoingEdgePoint": Vector3 {
      "x": 438.8389102471241,
      "y": 504,
      "z": -159.89209487309668,
    },
    "path": "/root/folder_1/children_3",
    "visible": true,
    "width": 710.0492230286274,
    "x0": 156.30199297565352,
    "y0": 90.10790512690332,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 25.329710109982358,
      "y": 4,
      "z": 339.99223594996226,
    },
    "isLeaf": false,
    "length": 786.6563145999497,
    "link": undefined,
    "markingColor": undefined,
    "name": "folder_2",
    "outgoingEdgePoint": Vector3 {
      "x": 25.329710109982358,
      "y": 4,
      "z": 733.3203932499371,
    },
    "path": "/root/folder_2",
    "visible": true,
    "width": 393.3281572999748,
    "x0": 78.66563145999496,
    "y0": 393.3281572999748,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -149.913803556888,
      "y": 504,
      "z": 380.5335029093068,
    },
    "isLeaf": true,
    "length": 624.4912467625713,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_4",
    "outgoingEdgePoint": Vector3 {
      "x": -149.913803556888,
      "y": 504,
      "z": 692.7791262905924,
    },
    "path": "/root/folder_2/children_4",
    "visible": true,
    "width": 0,
    "x0": 100.08619644311199,
    "y0": 474.41069121866394,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -149.913803556888,
      "y": 504,
      "z": 380.5335029093068,
    },
    "isLeaf": true,
    "length": 624.4912467625713,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_5",
    "outgoingEdgePoint": Vector3 {
      "x": -149.913803556888,
      "y": 504,
      "z": 692.7791262905924,
    },
    "path": "/root/folder_2/children_5",
    "visible": true,
    "width": 0,
    "x0": 100.08619644311199,
    "y0": 474.41069121866394,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 497.3234988699522,
      "y": 4,
      "z": 339.99223594996226,
    },
    "isLeaf": false,
    "length": 786.6563145999497,
    "link": undefined,
    "markingColor": undefined,
    "name": "folder_3",
    "outgoingEdgePoint": Vector3 {
      "x": 497.3234988699522,
      "y": 4,
      "z": 733.3203932499371,
    },
    "path": "/root/folder_3",
    "visible": true,
    "width": 393.3281572999748,
    "x0": 550.6594202199648,
    "y0": 393.3281572999748,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 4,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 322.0799852030817,
      "y": 504,
      "z": 380.5335029093068,
    },
    "isLeaf": true,
    "length": 624.4912467625713,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_6",
    "outgoingEdgePoint": Vector3 {
      "x": 322.0799852030817,
      "y": 504,
      "z": 692.7791262905924,
    },
    "path": "/root/folder_3/children_6",
    "visible": true,
    "width": 0,
    "x0": 572.0799852030817,
    "y0": 474.41069121866394,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 322.0799852030817,
      "y": 504,
      "z": 380.5335029093068,
    },
    "isLeaf": true,
    "length": 624.4912467625713,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_7",
    "outgoingEdgePoint": Vector3 {
      "x": 322.0799852030817,
      "y": 504,
      "z": 692.7791262905924,
    },
    "path": "/root/folder_3/children_7",
    "visible": true,
    "width": 0,
    "x0": 572.0799852030817,
    "y0": 474.41069121866394,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 851.3188404399295,
      "y": 4,
      "z": 182.66097302997227,
    },
    "isLeaf": false,
    "length": 1415.9813662799093,
    "link": undefined,
    "markingColor": undefined,
    "name": "folder_4",
    "outgoingEdgePoint": Vector3 {
      "x": 851.3188404399295,
      "y": 4,
      "z": 890.6516561699268,
    },
    "path": "/root/folder_4",
    "visible": true,
    "width": 157.33126291998997,
    "x0": 1022.6532089799346,
    "y0": 78.66563145999496,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 20,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 781.5233512210375,
      "y": 504,
      "z": 249.8630244087748,
    },
    "isLeaf": true,
    "length": 1147.1731607646996,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_8",
    "outgoingEdgePoint": Vector3 {
      "x": 781.5233512210375,
      "y": 504,
      "z": 823.4496047911246,
    },
    "path": "/root/folder_4/children_8",
    "visible": true,
    "width": 0,
    "x0": 1031.5233512210375,
    "y0": 213.06973421759992,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 781.5233512210375,
      "y": 504,
      "z": 249.8630244087748,
    },
    "isLeaf": true,
    "length": 1147.1731607646996,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_9",
    "outgoingEdgePoint": Vector3 {
      "x": 781.5233512210375,
      "y": 504,
      "z": 823.4496047911246,
    },
    "path": "/root/folder_4/children_9",
    "visible": true,
    "width": 0,
    "x0": 1031.5233512210375,
    "y0": 213.06973421759992,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1126.6485505499118,
      "y": 4,
      "z": 182.66097302997227,
    },
    "isLeaf": false,
    "length": 1415.9813662799093,
    "link": undefined,
    "markingColor": undefined,
    "name": "folder_5",
    "outgoingEdgePoint": Vector3 {
      "x": 1126.6485505499118,
      "y": 4,
      "z": 890.6516561699268,
    },
    "path": "/root/folder_5",
    "visible": true,
    "width": 235.99689437998495,
    "x0": 1258.6501033599193,
    "y0": 78.66563145999496,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1021.8008535858044,
      "y": 504,
      "z": 249.8630244087748,
    },
    "isLeaf": true,
    "length": 1147.1731607646996,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_10",
    "outgoingEdgePoint": Vector3 {
      "x": 1021.8008535858044,
      "y": 504,
      "z": 823.4496047911246,
    },
    "path": "/root/folder_5/children_10",
    "visible": true,
    "width": 0,
    "x0": 1271.8008535858044,
    "y0": 213.06973421759992,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1021.8008535858044,
      "y": 504,
      "z": 249.8630244087748,
    },
    "isLeaf": true,
    "length": 1147.1731607646996,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_11",
    "outgoingEdgePoint": Vector3 {
      "x": 1021.8008535858044,
      "y": 504,
      "z": 823.4496047911246,
    },
    "path": "/root/folder_5/children_11",
    "visible": true,
    "width": 0,
    "x0": 1271.8008535858044,
    "y0": 213.06973421759992,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 44.996117974981104,
      "y": 4,
      "z": 1126.6485505499118,
    },
    "isLeaf": false,
    "length": 235.99689437998495,
    "link": undefined,
    "markingColor": undefined,
    "name": "folder_6",
    "outgoingEdgePoint": Vector3 {
      "x": 477.6570910049534,
      "y": 4,
      "z": 1126.6485505499118,
    },
    "path": "/root/folder_6",
    "visible": true,
    "width": 865.3219460599446,
    "x0": 78.66563145999496,
    "y0": 1258.6501033599193,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 1,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 89.11779022334994,
      "y": 504,
      "z": 1021.8008535858044,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_12",
    "outgoingEdgePoint": Vector3 {
      "x": 433.5354187565845,
      "y": 504,
      "z": 1021.8008535858044,
    },
    "path": "/root/folder_6/children_12",
    "visible": true,
    "width": 688.8352570664691,
    "x0": 166.90897595673266,
    "y0": 1271.8008535858044,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 1,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 89.11779022334994,
      "y": 504,
      "z": 1021.8008535858044,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "markingColor": undefined,
    "name": "children_13",
    "outgoingEdgePoint": Vector3 {
      "x": 433.5354187565845,
      "y": 504,
      "z": 1021.8008535858044,
    },
    "path": "/root/folder_6/children_13",
    "visible": true,
    "width": 688.8352570664691,
    "x0": 166.90897595673266,
    "y0": 1271.8008535858044,
    "z0": 4,
  },
]
`;
